updates optimized scripts removed mktemp and dirname from requirements cat replaced with readStream and readFile functions new libget.rc library GET variable changed to getString core was separated from the examples new http_header_x_frame_options_deny and http_header_server_id options more http headers for the browser script that starts tcpserver separated from the controller.sh separate configuration files for tcpserver.sh and controller.sh

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -20,6 +20,7 @@
 	<body>
 		<h1>It works!</h1>
 		<a href="/test">Rendering test ==&gt;</a><br>
+		<a href="/test-libget">libget test ==&gt;</a><br>
 		<a href="/shared">Shared files ==&gt;</a>
 	</body>
 </html>
